<resources>
    <string name="app_name">Register</string>
    <string name="login">用户登录</string>
    <string name="tv_username">用户:</string>
    <string name="tv_password">密码:</string>
    <string name="tv_repassword">再次输入密码:</string>
    <string name="bt_log">登录</string>
    <string name="bt_bos">立即注册</string>
    <string name="bt_save">找回密码</string>
    <string name="et_username">输入用户名</string>
    <string name="et_password">输入密码</string>
    <string name="reg">欢迎注册</string>
    <string name="et_repassword">请再输入密码</string>
    <string name="pass">密码</string>
    <string name="user_input">请输入用户名</string>
    <string name="pass_input">请输入密码</string>
    <string name="repass_input">请再次输入密码</string>
    <string name="login_error">忘记密码</string>
    <string name="register">注册</string>
    <string name="password">输入原密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
