<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user"
    tools:context=".LoginActivity"
    android:orientation="vertical"

    >
    <include layout="@layout/tool_bar" />
    <ImageView
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/title"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/user"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/user_input"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="360dp"
        android:layout_height="72dp"
        android:drawableStart="@drawable/pass"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/pass_input"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape"
        android:layout_gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textSize="20dp" />
    <Button
        android:id="@+id/register"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="end"
        android:text="@string/register" />
    <Button
        android:id="@+id/login_error"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="-47dp"
        android:layout_marginRight="72dp"
        android:layout_marginLeft="30dp"
        android:text="@string/login_error" />

</LinearLayout>