<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/user"
        android:orientation="vertical">
        <ImageView

            android:layout_width="85dp"
            android:layout_height="82dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/title"
            />

        <EditText
            android:id="@+id/user"
            android:layout_width="280dp"
            android:layout_height="72dp"
            android:drawableStart="@drawable/user"
            android:ems="10"
            android:hint="@string/user_input"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="280dp"
            android:layout_height="72dp"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/pass_input"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="280dp"
            android:layout_height="72dp"
            android:drawableStart="@drawable/pass"
            android:ems="10"
            android:hint="@string/repass_input"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/register"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="注册" />
    </LinearLayout>
</LinearLayout>